--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "9461041c",
    "metadata": {},
    "outputs": [
@@ -10,48 +10,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded pre-trained model from S3\n",
-      "Model Performance:\n",
-      "  Target: aqi_index\n",
-      "    RMSE: 2.0081223477374364\n",
-      "    MAE: 1.8101914399194654\n",
-      "    R²: -3.7995604949847666\n",
-      "  Target: Calculated_AQI\n",
-      "    RMSE: 124.77295563352484\n",
-      "    MAE: 78.74878941503074\n",
-      "    R²: -0.4680402598736384\n",
-      "\n",
-      "Predicted values for the next 3 days:\n",
-      "         Date  Predicted_AQI  Predicted_Calculated_AQI\n",
-      "0  2025-04-29           2.31                    177.63\n",
-      "1  2025-04-30           2.31                    177.63\n",
-      "2  2025-05-01           2.31                    177.63\n",
-      "\n",
-      "Top 10 most important features (from first target model):\n",
-      "                 Feature  Importance\n",
-      "6                  pm2_5    0.873170\n",
-      "7                   pm10    0.107621\n",
-      "4                     o3    0.016397\n",
-      "0                  index    0.001109\n",
-      "8                    nh3    0.000292\n",
-      "21                   day    0.000252\n",
-      "5                    so2    0.000236\n",
-      "3                    no2    0.000182\n",
-      "22                  hour    0.000169\n",
-      "10  relative_humidity_2m    0.000146\n"
+      "Attempting to load model from S3: my-feature-store-data/models/best_model.pkl\n",
+      "Model file exists at my-feature-store-data/models/best_model.pkl\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator GradientBoostingRegressor from version 1.6.1 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n",
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator DummyRegressor from version 1.6.1 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n"
      ]
     },
@@ -59,7 +30,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrained model saved to S3.\n"
+      "Could not load model: <class 'numpy.random._mt19937.MT19937'> is not a known BitGenerator module.. Training new model.\n",
+      "\n",
+      "Model Performance:\n",
+      "  Target: aqi_index\n",
+      "    RMSE: 0.2418\n",
+      "    MAE: 0.1193\n",
+      "    R²: 0.9305\n",
+      "  Target: Calculated_AQI\n",
+      "    RMSE: 7.5247\n",
+      "    MAE: 1.5345\n",
+      "    R²: 0.9947\n",
+      "\n",
+      "Predicted values for the next 3 days:\n",
+      "         Date  Predicted_AQI  Predicted_Calculated_AQI\n",
+      "0  2025-04-30           3.58                    236.87\n",
+      "1  2025-05-01           3.73                    237.35\n",
+      "2  2025-05-02           3.74                    237.37\n",
+      "\n",
+      "Top 10 most important features:\n",
+      "             Feature  Importance\n",
+      "7               pm10    0.445593\n",
+      "1                 co    0.378855\n",
+      "0              index    0.126084\n",
+      "6              pm2_5    0.017602\n",
+      "5                so2    0.016148\n",
+      "4                 o3    0.005946\n",
+      "3                no2    0.005233\n",
+      "9     temperature_2m    0.001560\n",
+      "12    wind_speed_10m    0.000461\n",
+      "14  surface_pressure    0.000341\n",
+      "\n",
+      "Retrained model saved to S3.\n",
+      "Scaler saved to S3.\n",
+      "Prediction results saved locally as 'prediction_results.pkl'.\n"
      ]
     }
    ],
@@ -70,35 +74,36 @@
     "from io import BytesIO\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "import joblib\n",
     "import boto3\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# Load your datasets\n",
+    "# Load environment variables\n",
     "load_dotenv()\n",
-    "# --- Step 1: Load Data from AWS S3 ---\n",
-    "# Your AWS credentials and bucket info\n",
-    "bucket_name = 'my-feature-store-data'\n",
-    "s3_key = 'pipeline-data/data.csv'  # Example: \"pipeline-data/data.csv\"\n",
     "\n",
-    "# Create an S3 client\n",
+    "# --- Step 1: Load Data from AWS S3 ---\n",
+    "bucket_name = 'my-feature-store-data'\n",
+    "data_key = 'pipeline-data/data.csv'\n",
+    "\n",
+    "# Create S3 client\n",
     "s3 = boto3.client(\n",
     "    's3',\n",
-    "    aws_access_key_id= os.getenv('AWS_ACCESS_KEY_ID'),\n",
+    "    aws_access_key_id=os.getenv('AWS_ACCESS_KEY_ID'),\n",
     "    aws_secret_access_key=os.getenv('AWS_SECRET_ACCESS_KEY'),\n",
     ")\n",
-    "bucket_name = 'my-feature-store-data'  # replace with your actual S3 bucket\n",
-    "data_key = 'pipeline-data/data.csv'  # replace with your actual file key\n",
     "\n",
-    "# Read CSV file from S3\n",
+    "# Load dataset\n",
     "obj = s3.get_object(Bucket=bucket_name, Key=data_key)\n",
     "df = pd.read_csv(obj['Body'])\n",
+    "\n",
     "# Process date columns\n",
     "df['date'] = pd.to_datetime(df[['year', 'month', 'day']])\n",
     "df = df.dropna(subset=['aqi_index', 'Calculated_AQI'])  # Remove rows with missing target values\n",
     "\n",
-    "# Extract features and targets\n",
+    "# Define features and target\n",
     "target_columns = ['aqi_index', 'Calculated_AQI']\n",
     "date_columns = ['year', 'month', 'day', 'hour']\n",
     "features = [col for col in df.columns if col not in target_columns and col != 'date']\n",
@@ -106,131 +111,100 @@
     "X = df[features]\n",
     "y = df[target_columns]\n",
     "\n",
-    "# Split data for training and testing\n",
+    "# Split data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# --- Step 2: Load the pre-trained multioutput model ---\n",
-    "# Option 1: Load from S3\n",
+    "# Scale features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# --- Step 2: Load or Train Model ---\n",
     "try:\n",
     "    model_key = 'models/best_model.pkl'\n",
+    "    print(f\"Attempting to load model from S3: {bucket_name}/{model_key}\")\n",
+    "    \n",
+    "    # Check if model exists\n",
+    "    s3.get_object(Bucket=bucket_name, Key=model_key)\n",
+    "    print(f\"Model file exists at {bucket_name}/{model_key}\")\n",
+    "    \n",
+    "    # Download model\n",
     "    model_buffer = BytesIO()\n",
     "    s3.download_fileobj(Bucket=bucket_name, Key=model_key, Fileobj=model_buffer)\n",
     "    model_buffer.seek(0)\n",
     "    model = joblib.load(model_buffer)\n",
-    "    print(\"Loaded pre-trained model from S3\")\n",
+    "    print(\"Successfully loaded pre-trained model from S3\")\n",
+    "\n",
     "except Exception as e:\n",
-    "    print(f\"Could not load model from S3: {e}\")\n",
-    "    # Option 2: Train a new model\n",
-    "    print(\"Training a new model...\")\n",
-    "    from sklearn.ensemble import RandomForestRegressor\n",
-    "    from sklearn.multioutput import MultiOutputRegressor\n",
-    "    from sklearn.preprocessing import StandardScaler\n",
+    "    print(f\"Could not load model: {str(e)}. Training new model.\")\n",
     "    \n",
-    "    # Scale features\n",
-    "    scaler = StandardScaler()\n",
-    "    X_train_scaled = scaler.fit_transform(X_train)\n",
-    "    X_test_scaled = scaler.transform(X_test)\n",
-    "    \n",
-    "    # Train model\n",
+    "    # Train new model\n",
     "    model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
     "    model.fit(X_train_scaled, y_train)\n",
     "\n",
-    "# Evaluate the model\n",
+    "# --- Step 3: Evaluate Model ---\n",
     "y_pred = model.predict(X_test_scaled)\n",
     "\n",
-    "# Calculate metrics for each target\n",
-    "print(\"Model Performance:\")\n",
+    "print(\"\\nModel Performance:\")\n",
     "for i, col in enumerate(target_columns):\n",
     "    rmse = np.sqrt(mean_squared_error(y_test.iloc[:, i], y_pred[:, i]))\n",
     "    mae = mean_absolute_error(y_test.iloc[:, i], y_pred[:, i])\n",
     "    r2 = r2_score(y_test.iloc[:, i], y_pred[:, i])\n",
     "    \n",
     "    print(f\"  Target: {col}\")\n",
-    "    print(f\"    RMSE: {rmse}\")\n",
-    "    print(f\"    MAE: {mae}\")\n",
-    "    print(f\"    R²: {r2}\")\n",
+    "    print(f\"    RMSE: {rmse:.4f}\")\n",
+    "    print(f\"    MAE: {mae:.4f}\")\n",
+    "    print(f\"    R²: {r2:.4f}\")\n",
     "\n",
-    "# --- Step 3: Predict AQI for Next 3 Days ---\n",
+    "# --- Step 4: Predict AQI for Next 3 Days ---\n",
     "start_date = datetime.now().replace(hour=0, minute=0, second=0, microsecond=0) + timedelta(days=1)\n",
     "future_dates = [start_date + timedelta(days=i) for i in range(3)]\n",
     "\n",
-    "# Create base future features with date components\n",
+    "# Prepare future features\n",
     "future_features = pd.DataFrame({\n",
     "    \"year\": [d.year for d in future_dates],\n",
     "    \"month\": [d.month for d in future_dates],\n",
     "    \"day\": [d.day for d in future_dates],\n",
-    "    \"hour\": [12] * 3,  # Prediction for noon each day\n",
+    "    \"hour\": [12] * 3,  # Predict for noon\n",
     "})\n",
     "\n",
-    "# Find most recent data in April 2025\n",
+    "# Find most recent data for April 2025\n",
     "recent_data = df[(df['year'] == 2025) & (df['month'] == 4)]\n",
     "\n",
-    "# If we have April 2025 data, use it for predictions\n",
+    "numeric_features = [col for col in features if col not in date_columns]\n",
+    "\n",
     "if len(recent_data) > 0:\n",
-    "    # Sort by date to get most recent entries\n",
-    "    recent_data = recent_data.sort_values(['year', 'month', 'day', 'hour'])\n",
-    "    \n",
-    "    # Get latest 72 hours (3 days) of data\n",
-    "    recent_data = recent_data.tail(72)\n",
-    "    \n",
-    "    # Calculate average value for each numerical feature except date features\n",
-    "    numeric_features = [col for col in features if col not in date_columns]\n",
     "    recent_averages = recent_data[numeric_features].mean().to_dict()\n",
-    "    \n",
-    "    # Apply these values to future predictions\n",
-    "    for feature, value in recent_averages.items():\n",
-    "        future_features[feature] = value\n",
     "else:\n",
-    "    # If no recent data, find data from similar season/month from previous years\n",
-    "    similar_season_data = df[df['month'] == 4]  # April data from any year\n",
-    "    \n",
+    "    similar_season_data = df[df['month'] == 4]\n",
     "    if len(similar_season_data) > 0:\n",
-    "        # Calculate averages for similar season\n",
-    "        numeric_features = [col for col in features if col not in date_columns]\n",
-    "        season_averages = similar_season_data[numeric_features].mean().to_dict()\n",
-    "        \n",
-    "        # Apply these values to future predictions\n",
-    "        for feature, value in season_averages.items():\n",
-    "            future_features[feature] = value\n",
+    "        recent_averages = similar_season_data[numeric_features].mean().to_dict()\n",
     "    else:\n",
-    "        # Fallback: use most recent data from any month\n",
-    "        recent_any = df.sort_values(['year', 'month', 'day']).tail(72)\n",
-    "        numeric_features = [col for col in features if col not in date_columns]\n",
-    "        any_averages = recent_any[numeric_features].mean().to_dict()\n",
-    "        \n",
-    "        # Apply these values to future predictions\n",
-    "        for feature, value in any_averages.items():\n",
-    "            future_features[feature] = value\n",
+    "        recent_averages = df[numeric_features].mean().to_dict()\n",
     "\n",
-    "# Adjust some features based on forecasted weather patterns (simplified)\n",
-    "# For example, consecutive days often show patterns\n",
-    "for i, date in enumerate(future_dates):\n",
-    "    if i > 0:  # Skip the first day\n",
-    "        # Add small variations to simulate weather changes\n",
-    "        for feature in ['temperature_2m', 'relative_humidity_2m', 'dew_point_2m', 'wind_speed_10m', 'wind_direction_10m', 'surface_pressure']:\n",
-    "            if feature in future_features.columns:\n",
-    "                # Add +/- 5% random variation\n",
-    "                variation = np.random.uniform(-0.05, 0.05)\n",
-    "                future_features.loc[i, feature] = future_features.loc[i-1, feature] * (1 + variation)\n",
+    "for feature, value in recent_averages.items():\n",
+    "    future_features[feature] = value\n",
     "\n",
-    "# Make sure all required columns are present\n",
+    "# Add small variations to weather-related features\n",
+    "for i in range(1, len(future_features)):\n",
+    "    for feature in ['temperature_2m', 'relative_humidity_2m', 'dew_point_2m', 'wind_speed_10m', 'wind_direction_10m', 'surface_pressure']:\n",
+    "        if feature in future_features.columns:\n",
+    "            variation = np.random.uniform(-0.05, 0.05)\n",
+    "            future_features.loc[i, feature] = future_features.loc[i-1, feature] * (1 + variation)\n",
+    "\n",
+    "# Fill missing columns\n",
     "required_columns = X_train.columns.tolist()\n",
     "for col in required_columns:\n",
     "    if col not in future_features.columns:\n",
-    "        # If a column is missing, use the mean from training data\n",
-    "        if col in X_train.columns:\n",
-    "            future_features[col] = X_train[col].mean()\n",
-    "        else:\n",
-    "            future_features[col] = 0\n",
+    "        future_features[col] = X_train[col].mean()\n",
     "\n",
-    "# Ensure columns are in the right order\n",
+    "# Order columns correctly\n",
     "future_features = future_features[required_columns]\n",
     "\n",
-    "# Scale features and predict\n",
+    "# Scale and predict\n",
     "future_scaled = scaler.transform(future_features)\n",
     "predictions = model.predict(future_scaled)\n",
     "\n",
-    "# Display results\n",
     "prediction_results = pd.DataFrame({\n",
     "    \"Date\": [d.strftime(\"%Y-%m-%d\") for d in future_dates],\n",
     "    \"Predicted_AQI\": np.round(predictions[:, 0], 2),\n",
@@ -240,7 +214,7 @@
     "print(\"\\nPredicted values for the next 3 days:\")\n",
     "print(prediction_results)\n",
     "\n",
-    "# Optional: Analysis of feature importance to understand the model\n",
+    "# --- Step 5: Feature Importance ---\n",
     "if hasattr(model, 'feature_importances_'):\n",
     "    feature_importance = pd.DataFrame({\n",
     "        'Feature': X_train.columns,\n",
@@ -250,7 +224,6 @@
     "    print(\"\\nTop 10 most important features:\")\n",
     "    print(feature_importance.head(10))\n",
     "elif hasattr(model, 'estimators_'):\n",
-    "    # For MultiOutputRegressor, access the first estimator's feature importances\n",
     "    estimator = model.estimators_[0]\n",
     "    if hasattr(estimator, 'feature_importances_'):\n",
     "        feature_importance = pd.DataFrame({\n",
@@ -261,21 +234,29 @@
     "        print(\"\\nTop 10 most important features (from first target model):\")\n",
     "        print(feature_importance.head(10))\n",
     "\n",
-    "# --- Optional: Save retrained model back to S3 ---\n",
+    "# --- Step 6: Save Model and Scaler to S3 ---\n",
+    "# Save model\n",
     "model_buffer = BytesIO()\n",
     "joblib.dump(model, model_buffer)\n",
     "model_buffer.seek(0)\n",
-    "\n",
     "s3.upload_fileobj(model_buffer, Bucket=bucket_name, Key='models/retrained_multioutput_model.pkl')\n",
-    "print(\"Retrained model saved to S3.\")\n",
+    "print(\"\\nRetrained model saved to S3.\")\n",
     "\n",
-    "# Save `prediction_results` to a file\n",
-    "prediction_results.to_pickle(\"prediction_results.pkl\")"
+    "# Save scaler\n",
+    "scaler_buffer = BytesIO()\n",
+    "joblib.dump(scaler, scaler_buffer)\n",
+    "scaler_buffer.seek(0)\n",
+    "s3.upload_fileobj(scaler_buffer, Bucket=bucket_name, Key='models/scaler.pkl')\n",
+    "print(\"Scaler saved to S3.\")\n",
+    "\n",
+    "# Save predictions locally\n",
+    "prediction_results.to_pickle(\"prediction_results.pkl\")\n",
+    "print(\"Prediction results saved locally as 'prediction_results.pkl'.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "773da10b",
    "metadata": {},
    "outputs": [],
