--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "fe1bc761",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "8413ece5",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "55e6ef9a",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "81bb914d",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "8ed6e660",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "de364cd3",
    "metadata": {},
    "outputs": [
@@ -219,6 +219,17 @@
     "# Summary of missing values\n",
     "missing_summary = df.isna().sum().sort_values(ascending=False)\n",
     "print(\"\\nMissing Value Summary:\\n\", missing_summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5e7b2d5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop repeated rows\n",
+    "df = df.drop_duplicates()"
    ]
   },
   {
