--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "9461041c",
    "metadata": {},
    "outputs": [
@@ -11,18 +11,49 @@
      "output_type": "stream",
      "text": [
       "Attempting to load model from S3: my-feature-store-data/models/best_model.pkl\n",
-      "Model file exists at my-feature-store-data/models/best_model.pkl\n"
+      "Successfully loaded pre-trained model from S3\n",
+      "\n",
+      "Model Performance:\n",
+      "  Target: aqi_index\n",
+      "    RMSE: 2.0074\n",
+      "    MAE: 1.8090\n",
+      "    R²: -3.7882\n",
+      "  Target: Calculated_AQI\n",
+      "    RMSE: 124.7729\n",
+      "    MAE: 78.7473\n",
+      "    R²: -0.4681\n",
+      "\n",
+      "Predicted values for the next 3 days:\n",
+      "         Date  Predicted_AQI  Predicted_Calculated_AQI\n",
+      "0  2025-04-30           2.31                    177.63\n",
+      "1  2025-05-01           2.31                    177.63\n",
+      "2  2025-05-02           2.31                    177.63\n",
+      "\n",
+      "Top 10 most important features (from first target model):\n",
+      "                 Feature  Importance\n",
+      "6                  pm2_5    0.873170\n",
+      "7                   pm10    0.107621\n",
+      "4                     o3    0.016397\n",
+      "0                  index    0.001109\n",
+      "8                    nh3    0.000292\n",
+      "21                   day    0.000252\n",
+      "5                    so2    0.000236\n",
+      "3                    no2    0.000182\n",
+      "22                  hour    0.000169\n",
+      "10  relative_humidity_2m    0.000146\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator GradientBoostingRegressor from version 1.6.1 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
       "  warnings.warn(\n",
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator DummyRegressor from version 1.6.1 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -30,36 +61,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Could not load model: <class 'numpy.random._mt19937.MT19937'> is not a known BitGenerator module.. Training new model.\n",
-      "\n",
-      "Model Performance:\n",
-      "  Target: aqi_index\n",
-      "    RMSE: 0.2418\n",
-      "    MAE: 0.1193\n",
-      "    R²: 0.9305\n",
-      "  Target: Calculated_AQI\n",
-      "    RMSE: 7.5247\n",
-      "    MAE: 1.5345\n",
-      "    R²: 0.9947\n",
-      "\n",
-      "Predicted values for the next 3 days:\n",
-      "         Date  Predicted_AQI  Predicted_Calculated_AQI\n",
-      "0  2025-04-30           3.58                    236.87\n",
-      "1  2025-05-01           3.73                    237.35\n",
-      "2  2025-05-02           3.74                    237.37\n",
-      "\n",
-      "Top 10 most important features:\n",
-      "             Feature  Importance\n",
-      "7               pm10    0.445593\n",
-      "1                 co    0.378855\n",
-      "0              index    0.126084\n",
-      "6              pm2_5    0.017602\n",
-      "5                so2    0.016148\n",
-      "4                 o3    0.005946\n",
-      "3                no2    0.005233\n",
-      "9     temperature_2m    0.001560\n",
-      "12    wind_speed_10m    0.000461\n",
-      "14  surface_pressure    0.000341\n",
       "\n",
       "Retrained model saved to S3.\n",
       "Scaler saved to S3.\n",
@@ -88,7 +89,6 @@
     "bucket_name = 'my-feature-store-data'\n",
     "data_key = 'pipeline-data/data.csv'\n",
     "\n",
-    "# Create S3 client\n",
     "s3 = boto3.client(\n",
     "    's3',\n",
     "    aws_access_key_id=os.getenv('AWS_ACCESS_KEY_ID'),\n",
@@ -99,11 +99,9 @@
     "obj = s3.get_object(Bucket=bucket_name, Key=data_key)\n",
     "df = pd.read_csv(obj['Body'])\n",
     "\n",
-    "# Process date columns\n",
     "df['date'] = pd.to_datetime(df[['year', 'month', 'day']])\n",
-    "df = df.dropna(subset=['aqi_index', 'Calculated_AQI'])  # Remove rows with missing target values\n",
+    "df = df.dropna(subset=['aqi_index', 'Calculated_AQI'])\n",
     "\n",
-    "# Define features and target\n",
     "target_columns = ['aqi_index', 'Calculated_AQI']\n",
     "date_columns = ['year', 'month', 'day', 'hour']\n",
     "features = [col for col in df.columns if col not in target_columns and col != 'date']\n",
@@ -111,10 +109,8 @@
     "X = df[features]\n",
     "y = df[target_columns]\n",
     "\n",
-    "# Split data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Scale features\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
@@ -124,22 +120,14 @@
     "    model_key = 'models/best_model.pkl'\n",
     "    print(f\"Attempting to load model from S3: {bucket_name}/{model_key}\")\n",
     "    \n",
-    "    # Check if model exists\n",
-    "    s3.get_object(Bucket=bucket_name, Key=model_key)\n",
-    "    print(f\"Model file exists at {bucket_name}/{model_key}\")\n",
-    "    \n",
-    "    # Download model\n",
     "    model_buffer = BytesIO()\n",
     "    s3.download_fileobj(Bucket=bucket_name, Key=model_key, Fileobj=model_buffer)\n",
     "    model_buffer.seek(0)\n",
     "    model = joblib.load(model_buffer)\n",
     "    print(\"Successfully loaded pre-trained model from S3\")\n",
-    "\n",
     "except Exception as e:\n",
     "    print(f\"Could not load model: {str(e)}. Training new model.\")\n",
-    "    \n",
-    "    # Train new model\n",
-    "    model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "    model = RandomForestRegressor(n_estimators=300, random_state=42)\n",
     "    model.fit(X_train_scaled, y_train)\n",
     "\n",
     "# --- Step 3: Evaluate Model ---\n",
@@ -160,48 +148,37 @@
     "start_date = datetime.now().replace(hour=0, minute=0, second=0, microsecond=0) + timedelta(days=1)\n",
     "future_dates = [start_date + timedelta(days=i) for i in range(3)]\n",
     "\n",
-    "# Prepare future features\n",
     "future_features = pd.DataFrame({\n",
     "    \"year\": [d.year for d in future_dates],\n",
     "    \"month\": [d.month for d in future_dates],\n",
     "    \"day\": [d.day for d in future_dates],\n",
-    "    \"hour\": [12] * 3,  # Predict for noon\n",
+    "    \"hour\": [12] * 3,\n",
     "})\n",
     "\n",
-    "# Find most recent data for April 2025\n",
     "recent_data = df[(df['year'] == 2025) & (df['month'] == 4)]\n",
-    "\n",
     "numeric_features = [col for col in features if col not in date_columns]\n",
     "\n",
     "if len(recent_data) > 0:\n",
     "    recent_averages = recent_data[numeric_features].mean().to_dict()\n",
     "else:\n",
     "    similar_season_data = df[df['month'] == 4]\n",
-    "    if len(similar_season_data) > 0:\n",
-    "        recent_averages = similar_season_data[numeric_features].mean().to_dict()\n",
-    "    else:\n",
-    "        recent_averages = df[numeric_features].mean().to_dict()\n",
+    "    recent_averages = similar_season_data[numeric_features].mean().to_dict() if len(similar_season_data) > 0 else df[numeric_features].mean().to_dict()\n",
     "\n",
     "for feature, value in recent_averages.items():\n",
     "    future_features[feature] = value\n",
     "\n",
-    "# Add small variations to weather-related features\n",
     "for i in range(1, len(future_features)):\n",
     "    for feature in ['temperature_2m', 'relative_humidity_2m', 'dew_point_2m', 'wind_speed_10m', 'wind_direction_10m', 'surface_pressure']:\n",
     "        if feature in future_features.columns:\n",
     "            variation = np.random.uniform(-0.05, 0.05)\n",
     "            future_features.loc[i, feature] = future_features.loc[i-1, feature] * (1 + variation)\n",
     "\n",
-    "# Fill missing columns\n",
     "required_columns = X_train.columns.tolist()\n",
     "for col in required_columns:\n",
     "    if col not in future_features.columns:\n",
     "        future_features[col] = X_train[col].mean()\n",
     "\n",
-    "# Order columns correctly\n",
     "future_features = future_features[required_columns]\n",
-    "\n",
-    "# Scale and predict\n",
     "future_scaled = scaler.transform(future_features)\n",
     "predictions = model.predict(future_scaled)\n",
     "\n",
@@ -235,28 +212,25 @@
     "        print(feature_importance.head(10))\n",
     "\n",
     "# --- Step 6: Save Model and Scaler to S3 ---\n",
-    "# Save model\n",
     "model_buffer = BytesIO()\n",
     "joblib.dump(model, model_buffer)\n",
     "model_buffer.seek(0)\n",
     "s3.upload_fileobj(model_buffer, Bucket=bucket_name, Key='models/retrained_multioutput_model.pkl')\n",
     "print(\"\\nRetrained model saved to S3.\")\n",
     "\n",
-    "# Save scaler\n",
     "scaler_buffer = BytesIO()\n",
     "joblib.dump(scaler, scaler_buffer)\n",
     "scaler_buffer.seek(0)\n",
     "s3.upload_fileobj(scaler_buffer, Bucket=bucket_name, Key='models/scaler.pkl')\n",
     "print(\"Scaler saved to S3.\")\n",
     "\n",
-    "# Save predictions locally\n",
     "prediction_results.to_pickle(\"prediction_results.pkl\")\n",
     "print(\"Prediction results saved locally as 'prediction_results.pkl'.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "773da10b",
    "metadata": {},
    "outputs": [],
