--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "0ed6cc23",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "a69ebbd1",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "0cce67d9",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "414706e3",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "c81e2291",
    "metadata": {},
    "outputs": [
@@ -145,58 +145,58 @@
      "text": [
       "Training Random_Forest...\n",
       "  Target: aqi_index\n",
-      "    RMSE: 0.3251133628643251\n",
-      "    MAE: 0.20052905399796558\n",
-      "    R²: 0.8741970653873768\n",
+      "    RMSE: 0.32366742072091625\n",
+      "    MAE: 0.1996360997246891\n",
+      "    R²: 0.8755223067558919\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 7.3012199883308915\n",
-      "    MAE: 1.6130456403737168\n",
-      "    R²: 0.9949732428020813\n",
-      "  Average RMSE: 3.8131666755976084\n",
+      "    RMSE: 7.301131330984675\n",
+      "    MAE: 1.6129420730549597\n",
+      "    R²: 0.9949732804693822\n",
+      "  Average RMSE: 3.8123993758527956\n",
       "\n",
       "Training Gradient_Boosting...\n",
       "  Target: aqi_index\n",
-      "    RMSE: 0.057114738483790624\n",
-      "    MAE: 0.01719769675896231\n",
-      "    R²: 0.9961174458941501\n",
+      "    RMSE: 0.04902223420522305\n",
+      "    MAE: 0.016215405387001947\n",
+      "    R²: 0.997144515818641\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 6.021153129142665\n",
-      "    MAE: 3.1203345172653214\n",
-      "    R²: 0.9965813362665047\n",
-      "  Average RMSE: 3.039133933813228\n",
+      "    RMSE: 6.0139262789600485\n",
+      "    MAE: 3.1173349595257505\n",
+      "    R²: 0.9965894805295203\n",
+      "  Average RMSE: 3.031474256582636\n",
       "\n",
       "Training Linear_Regression...\n",
       "  Target: aqi_index\n",
-      "    RMSE: 0.5878464857987662\n",
-      "    MAE: 0.47073217604526535\n",
-      "    R²: 0.5887092104702165\n",
+      "    RMSE: 0.586158138892673\n",
+      "    MAE: 0.46987087148263296\n",
+      "    R²: 0.5917528544308968\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 84.24911700233025\n",
-      "    MAE: 62.0492469971663\n",
-      "    R²: 0.33068931851285344\n",
-      "  Average RMSE: 42.41848174406451\n",
+      "    RMSE: 84.26326390240223\n",
+      "    MAE: 62.05942231381979\n",
+      "    R²: 0.33045327851273465\n",
+      "  Average RMSE: 42.42471102064745\n",
       "\n",
       "Training Ridge_Regression...\n",
       "  Target: aqi_index\n",
-      "    RMSE: 0.5899124503583473\n",
-      "    MAE: 0.4741457893723793\n",
-      "    R²: 0.5858131981393443\n",
+      "    RMSE: 0.588514130973452\n",
+      "    MAE: 0.47319157572292625\n",
+      "    R²: 0.5884644585117\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 84.5515455829137\n",
-      "    MAE: 62.44261376381183\n",
-      "    R²: 0.3258754522746524\n",
-      "  Average RMSE: 42.57072901663602\n",
+      "    RMSE: 84.54720072827925\n",
+      "    MAE: 62.43340376829032\n",
+      "    R²: 0.32593341394995967\n",
+      "  Average RMSE: 42.56785742962635\n",
       "\n",
       "Training SVR...\n",
       "  Target: aqi_index\n",
-      "    RMSE: 0.42448992380889133\n",
-      "    MAE: 0.2935968714261188\n",
-      "    R²: 0.7855352586919919\n",
+      "    RMSE: 0.42390773772277063\n",
+      "    MAE: 0.2930226225225865\n",
+      "    R²: 0.786481138267511\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 93.77634628939605\n",
-      "    MAE: 52.74757334560757\n",
-      "    R²: 0.1707534834469493\n",
-      "  Average RMSE: 47.10041810660247\n",
+      "    RMSE: 93.77562244790788\n",
+      "    MAE: 52.74202362076376\n",
+      "    R²: 0.17075236005617067\n",
+      "  Average RMSE: 47.099765092815325\n",
       "\n",
       "Training Neural_Network...\n"
      ]
@@ -214,40 +214,41 @@
      "output_type": "stream",
      "text": [
       "  Target: aqi_index\n",
-      "    RMSE: 2.378264076384967\n",
-      "    MAE: 1.7940469739235767\n",
-      "    R²: -5.731956224492621\n",
+      "    RMSE: 2.3857578690522474\n",
+      "    MAE: 1.798445476775749\n",
+      "    R²: -5.763107452422866\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 33.13262619148422\n",
-      "    MAE: 18.027772420892347\n",
-      "    R²: 0.8964836949409979\n",
-      "  Average RMSE: 17.755445133934593\n",
+      "    RMSE: 33.13266146203929\n",
+      "    MAE: 18.02922064503665\n",
+      "    R²: 0.8964817362452883\n",
+      "  Average RMSE: 17.759209665545768\n",
       "\n",
       "\n",
-      "Best model: Gradient_Boosting (Average RMSE = 3.04)\n",
+      "Best model: Gradient_Boosting (Average RMSE = 3.03)\n",
       "Model uploaded to s3://my-feature-store-data/models/best_model.pkl\n",
       "\n",
       "Summary of Model Performance:\n",
       "               Model  RMSE_aqi_index  MAE_aqi_index  R²_aqi_index  \\\n",
-      "0      Random_Forest        0.325113       0.200529      0.874197   \n",
-      "1  Gradient_Boosting        0.057115       0.017198      0.996117   \n",
-      "2  Linear_Regression        0.587846       0.470732      0.588709   \n",
-      "3   Ridge_Regression        0.589912       0.474146      0.585813   \n",
-      "4                SVR        0.424490       0.293597      0.785535   \n",
-      "5     Neural_Network        2.378264       1.794047     -5.731956   \n",
+      "0      Random_Forest        0.323667       0.199636      0.875522   \n",
+      "1  Gradient_Boosting        0.049022       0.016215      0.997145   \n",
+      "2  Linear_Regression        0.586158       0.469871      0.591753   \n",
+      "3   Ridge_Regression        0.588514       0.473192      0.588464   \n",
+      "4                SVR        0.423908       0.293023      0.786481   \n",
+      "5     Neural_Network        2.385758       1.798445     -5.763107   \n",
       "\n",
       "   RMSE_Calculated_AQI  MAE_Calculated_AQI  R²_Calculated_AQI   Avg_RMSE  \n",
-      "0             7.301220            1.613046           0.994973   3.813167  \n",
-      "1             6.021153            3.120335           0.996581   3.039134  \n",
-      "2            84.249117           62.049247           0.330689  42.418482  \n",
-      "3            84.551546           62.442614           0.325875  42.570729  \n",
-      "4            93.776346           52.747573           0.170753  47.100418  \n",
-      "5            33.132626           18.027772           0.896484  17.755445  \n"
+      "0             7.301131            1.612942           0.994973   3.812399  \n",
+      "1             6.013926            3.117335           0.996589   3.031474  \n",
+      "2            84.263264           62.059422           0.330453  42.424711  \n",
+      "3            84.547201           62.433404           0.325933  42.567857  \n",
+      "4            93.775622           52.742024           0.170752  47.099765  \n",
+      "5            33.132661           18.029221           0.896482  17.759210  \n"
      ]
     }
    ],
    "source": [
     "# Import additional required libraries\n",
+    "from io import BytesIO\n",
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "\n",
     "# ✅ Step 3: Define Models with MultiOutput capability\n",
@@ -306,12 +307,16 @@
     "# -----------------------\n",
     "# Step 5: Save Best Model Locally\n",
     "print(f\"\\nBest model: {best_model_name} (Average RMSE = {best_avg_rmse:.2f})\")\n",
-    "joblib.dump(best_model, \"best_model.pkl\")\n",
+    "# joblib.dump(best_model, \"best_model.pkl\")\n",
     "\n",
     "S3_KEY = \"models/best_model.pkl\"\n",
     "\n",
     "# Upload\n",
-    "s3.upload_file(\"best_model.pkl\", bucket_name, S3_KEY)\n",
+    "# s3.upload_file(\"best_model.pkl\", bucket_name, S3_KEY)\n",
+    "model_buffer = BytesIO()\n",
+    "joblib.dump(best_model, model_buffer)\n",
+    "model_buffer.seek(0)\n",
+    "s3.upload_fileobj(model_buffer, Bucket=bucket_name, Key=S3_KEY)\n",
     "print(f\"Model uploaded to s3://{bucket_name}/{S3_KEY}\")\n",
     "\n",
     "# -----------------------\n",
@@ -320,6 +325,14 @@
     "print(\"\\nSummary of Model Performance:\")\n",
     "print(results_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59c321a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
