--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -116,7 +116,7 @@
     "# Scale features\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
+    "test_scaled = scaler.transform(X_test)\n",
     "# initialize Y_pred to None\n",
     "Y_predicted = None\n",
     "# --- Step 2: Load or Train Model ---\n",
@@ -136,14 +136,14 @@
     "    print(\"Loading model...\")\n",
     "    model = joblib.load(model_buffer)\n",
     "    print(\"Successfully loaded pre-trained model from S3\") \n",
-    "    y_pred = model.predict(X_test_scaled) \n",
+    "    y_pred = model.predict(test_scaled) \n",
     "    Y_predicted = y_pred\n",
     "except Exception as e:\n",
     "    print(f\"Could not load model: {str(e)}. Training new model.\")\n",
     "    # Train new model\n",
     "    model = RandomForestRegressor(n_estimators=300, random_state=42)\n",
     "    model.fit(X_train_scaled, y_train)\n",
-    "    y_pred = model.predict(X_test_scaled)\n",
+    "    y_pred = model.predict(test_scaled)\n",
     "    Y_predicted = y_pred\n",
     "\n",
     "# --- Step 3: Evaluate Model ---\n",
