--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9461041c",
    "metadata": {},
    "outputs": [
@@ -10,42 +10,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to load model from S3: my-feature-store-data/models/best_model.pkl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator GradientBoostingRegressor from version 1.6.1 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator DummyRegressor from version 1.6.1 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Could not load model: <class 'numpy.random._mt19937.MT19937'> is not a known BitGenerator module.. Training new model.\n",
+      "Attempting to load model from S3: my-feature-store-data/models/best_model.pkl\n",
+      "Model file exists at my-feature-store-data/models/best_model.pkl\n",
+      "Could not load model: expected str, bytes or os.PathLike object, not BytesIO. Training new model.\n",
       "\n",
       "Model Performance:\n",
       "  Target: aqi_index\n",
       "    RMSE: 0.2403\n",
-      "    MAE: 0.1191\n",
+      "    MAE: 0.1190\n",
       "    R²: 0.9314\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 7.1535\n",
-      "    MAE: 1.5161\n",
+      "    RMSE: 7.1532\n",
+      "    MAE: 1.5156\n",
       "    R²: 0.9952\n",
       "\n",
       "Predicted values for the next 3 days:\n",
       "         Date  Predicted_AQI  Predicted_Calculated_AQI\n",
       "0  2025-04-30           3.64                    232.20\n",
-      "1  2025-05-01           3.74                    233.26\n",
-      "2  2025-05-02           3.74                    234.68\n",
+      "1  2025-05-01           3.57                    233.17\n",
+      "2  2025-05-02           3.58                    232.26\n",
       "\n",
       "Top 10 most important features:\n",
       "           Feature  Importance\n",
@@ -62,7 +45,7 @@
       "\n",
       "Retrained model saved to S3.\n",
       "Scaler saved to S3.\n",
-      "Prediction results saved locally as 'prediction_results.pkl'.\n"
+      "Prediction results saved to S3.\n"
      ]
     }
    ],
@@ -253,9 +236,12 @@
     "s3.upload_fileobj(scaler_buffer, Bucket=bucket_name, Key='models/scaler.pkl')\n",
     "print(\"Scaler saved to S3.\")\n",
     "\n",
-    "# Save predictions locally\n",
-    "prediction_results.to_pickle(\"prediction_results.pkl\")\n",
-    "print(\"Prediction results saved locally as 'prediction_results.pkl'.\")\n"
+    "# Save predictions to aws s3 bucket\n",
+    "prediction_buffer = BytesIO()\n",
+    "prediction_results.to_csv(prediction_buffer, index=False)\n",
+    "prediction_buffer.seek(0)\n",
+    "s3.upload_fileobj(prediction_buffer, Bucket=bucket_name, Key='predictions/prediction_results.csv')\n",
+    "print(\"Prediction results saved to S3.\")"
    ]
   },
   {
