--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0ed6cc23",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a69ebbd1",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0cce67d9",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "414706e3",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "c81e2291",
    "metadata": {},
    "outputs": [
@@ -145,60 +145,89 @@
      "text": [
       "Training Random_Forest...\n",
       "  Target: aqi_index\n",
-      "    RMSE: 0.32366742072091625\n",
-      "    MAE: 0.1996360997246891\n",
-      "    R²: 0.8755223067558919\n",
+      "    RMSE: 0.323664506854938\n",
+      "    MAE: 0.1996290739600245\n",
+      "    R²: 0.8755245480051466\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 7.301131330984675\n",
-      "    MAE: 1.6129420730549597\n",
-      "    R²: 0.9949732804693822\n",
-      "  Average RMSE: 3.8123993758527956\n",
+      "    RMSE: 7.300486707695632\n",
+      "    MAE: 1.6121383883111136\n",
+      "    R²: 0.9949740847488451\n",
+      "  Average RMSE: 3.8120756072752853\n",
       "\n",
       "Training Gradient_Boosting...\n",
       "  Target: aqi_index\n",
-      "    RMSE: 0.04902223420522305\n",
-      "    MAE: 0.016215405387001947\n",
-      "    R²: 0.997144515818641\n",
+      "    RMSE: 0.049020969329610885\n",
+      "    MAE: 0.016204030706548928\n",
+      "    R²: 0.997144663171603\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 6.0139262789600485\n",
-      "    MAE: 3.1173349595257505\n",
-      "    R²: 0.9965894805295203\n",
-      "  Average RMSE: 3.031474256582636\n",
+      "    RMSE: 6.013866334993563\n",
+      "    MAE: 3.117307613737743\n",
+      "    R²: 0.9965894919863428\n",
+      "  Average RMSE: 3.031443652161587\n",
       "\n",
       "Training Linear_Regression...\n",
       "  Target: aqi_index\n",
-      "    RMSE: 0.586158138892673\n",
-      "    MAE: 0.46987087148263296\n",
-      "    R²: 0.5917528544308968\n",
+      "    RMSE: 0.5855752618949703\n",
+      "    MAE: 0.4690884869791563\n",
+      "    R²: 0.5925643745372393\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 84.26326390240223\n",
-      "    MAE: 62.05942231381979\n",
-      "    R²: 0.33045327851273465\n",
-      "  Average RMSE: 42.42471102064745\n",
+      "    RMSE: 84.23190155931523\n",
+      "    MAE: 62.0356708762222\n",
+      "    R²: 0.3309404991271254\n",
+      "  Average RMSE: 42.4087384106051\n",
       "\n",
       "Training Ridge_Regression...\n",
       "  Target: aqi_index\n",
-      "    RMSE: 0.588514130973452\n",
-      "    MAE: 0.47319157572292625\n",
-      "    R²: 0.5884644585117\n",
+      "    RMSE: 0.5883819817701395\n",
+      "    MAE: 0.47297138652351756\n",
+      "    R²: 0.5886492560728201\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 84.54720072827925\n",
-      "    MAE: 62.43340376829032\n",
-      "    R²: 0.32593341394995967\n",
-      "  Average RMSE: 42.56785742962635\n",
+      "    RMSE: 84.53955294188049\n",
+      "    MAE: 62.40684527375095\n",
+      "    R²: 0.32604418360476195\n",
+      "  Average RMSE: 42.563967461825314\n",
       "\n",
       "Training SVR...\n",
       "  Target: aqi_index\n",
-      "    RMSE: 0.42390773772277063\n",
-      "    MAE: 0.2930226225225865\n",
-      "    R²: 0.786481138267511\n",
+      "    RMSE: 0.4238961722589369\n",
+      "    MAE: 0.2929934160222826\n",
+      "    R²: 0.7864927889677297\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 93.77562244790788\n",
-      "    MAE: 52.74202362076376\n",
-      "    R²: 0.17075236005617067\n",
-      "  Average RMSE: 47.099765092815325\n",
+      "    RMSE: 93.77550614954143\n",
+      "    MAE: 52.74085229245246\n",
+      "    R²: 0.1707406712888253\n",
+      "  Average RMSE: 47.09970116090018\n",
       "\n",
-      "Training Neural_Network...\n"
+      "Training Neural_Network...\n",
+      "  Target: aqi_index\n",
+      "    RMSE: 2.3783054197331412\n",
+      "    MAE: 1.7940923517757115\n",
+      "    R²: -5.720921281181228\n",
+      "  Target: Calculated_AQI\n",
+      "    RMSE: 33.13316642377875\n",
+      "    MAE: 18.033989597332866\n",
+      "    R²: 0.8964768648863168\n",
+      "  Average RMSE: 17.755735921755946\n",
+      "\n",
+      "\n",
+      "Best model: Gradient_Boosting (Average RMSE = 3.03)\n",
+      "\n",
+      "Summary of Model Performance:\n",
+      "               Model  RMSE_aqi_index  MAE_aqi_index  R²_aqi_index  \\\n",
+      "0      Random_Forest        0.323665       0.199629      0.875525   \n",
+      "1  Gradient_Boosting        0.049021       0.016204      0.997145   \n",
+      "2  Linear_Regression        0.585575       0.469088      0.592564   \n",
+      "3   Ridge_Regression        0.588382       0.472971      0.588649   \n",
+      "4                SVR        0.423896       0.292993      0.786493   \n",
+      "5     Neural_Network        2.378305       1.794092     -5.720921   \n",
+      "\n",
+      "   RMSE_Calculated_AQI  MAE_Calculated_AQI  R²_Calculated_AQI   Avg_RMSE  \n",
+      "0             7.300487            1.612138           0.994974   3.812076  \n",
+      "1             6.013866            3.117308           0.996589   3.031444  \n",
+      "2            84.231902           62.035671           0.330940  42.408738  \n",
+      "3            84.539553           62.406845           0.326044  42.563967  \n",
+      "4            93.775506           52.740852           0.170741  47.099701  \n",
+      "5            33.133166           18.033990           0.896477  17.755736  \n"
      ]
     },
     {
@@ -207,42 +236,6 @@
      "text": [
       "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/neural_network/_multilayer_perceptron.py:690: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Target: aqi_index\n",
-      "    RMSE: 2.3857578690522474\n",
-      "    MAE: 1.798445476775749\n",
-      "    R²: -5.763107452422866\n",
-      "  Target: Calculated_AQI\n",
-      "    RMSE: 33.13266146203929\n",
-      "    MAE: 18.02922064503665\n",
-      "    R²: 0.8964817362452883\n",
-      "  Average RMSE: 17.759209665545768\n",
-      "\n",
-      "\n",
-      "Best model: Gradient_Boosting (Average RMSE = 3.03)\n",
-      "Model uploaded to s3://my-feature-store-data/models/best_model.pkl\n",
-      "\n",
-      "Summary of Model Performance:\n",
-      "               Model  RMSE_aqi_index  MAE_aqi_index  R²_aqi_index  \\\n",
-      "0      Random_Forest        0.323667       0.199636      0.875522   \n",
-      "1  Gradient_Boosting        0.049022       0.016215      0.997145   \n",
-      "2  Linear_Regression        0.586158       0.469871      0.591753   \n",
-      "3   Ridge_Regression        0.588514       0.473192      0.588464   \n",
-      "4                SVR        0.423908       0.293023      0.786481   \n",
-      "5     Neural_Network        2.385758       1.798445     -5.763107   \n",
-      "\n",
-      "   RMSE_Calculated_AQI  MAE_Calculated_AQI  R²_Calculated_AQI   Avg_RMSE  \n",
-      "0             7.301131            1.612942           0.994973   3.812399  \n",
-      "1             6.013926            3.117335           0.996589   3.031474  \n",
-      "2            84.263264           62.059422           0.330453  42.424711  \n",
-      "3            84.547201           62.433404           0.325933  42.567857  \n",
-      "4            93.775622           52.742024           0.170752  47.099765  \n",
-      "5            33.132661           18.029221           0.896482  17.759210  \n"
      ]
     }
    ],
@@ -309,15 +302,6 @@
     "print(f\"\\nBest model: {best_model_name} (Average RMSE = {best_avg_rmse:.2f})\")\n",
     "# joblib.dump(best_model, \"best_model.pkl\")\n",
     "\n",
-    "S3_KEY = \"models/best_model.pkl\"\n",
-    "\n",
-    "# Upload\n",
-    "# s3.upload_file(\"best_model.pkl\", bucket_name, S3_KEY)\n",
-    "model_buffer = BytesIO()\n",
-    "joblib.dump(best_model, model_buffer)\n",
-    "model_buffer.seek(0)\n",
-    "s3.upload_fileobj(model_buffer, Bucket=bucket_name, Key=S3_KEY)\n",
-    "print(f\"Model uploaded to s3://{bucket_name}/{S3_KEY}\")\n",
     "\n",
     "# -----------------------\n",
     "# Step 7: Summary\n",
@@ -328,16 +312,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "59c321a5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import joblib\n",
+    "import json\n",
+    "import sklearn\n",
+    "import numpy as np\n",
+    "from io import BytesIO\n",
+    "\n",
+    "S3_MODEL_KEY = \"models/best_model.pkl\"\n",
+    "S3_METADATA_KEY = \"models/best_model_metadata.json\"\n",
+    "\n",
+    "def upload_model_to_s3(model, bucket_name, s3_client):\n",
+    "    # --- Save model to BytesIO buffer ---\n",
+    "    model_buffer = BytesIO()\n",
+    "    joblib.dump(model, model_buffer)\n",
+    "    model_buffer.seek(0)\n",
+    "    s3_client.upload_fileobj(model_buffer, Bucket=bucket_name, Key=S3_MODEL_KEY)\n",
+    "    print(f\"✅ Model uploaded to s3://{bucket_name}/{S3_MODEL_KEY}\")\n",
+    "\n",
+    "    # --- Save version metadata ---\n",
+    "    metadata = {\n",
+    "        \"sklearn_version\": sklearn.__version__,\n",
+    "        \"numpy_version\": np.__version__,\n",
+    "        \"model_type\": type(model).__name__,\n",
+    "    }\n",
+    "\n",
+    "    metadata_buffer = BytesIO()\n",
+    "    metadata_buffer.write(json.dumps(metadata).encode(\"utf-8\"))\n",
+    "    metadata_buffer.seek(0)\n",
+    "    s3_client.upload_fileobj(metadata_buffer, Bucket=bucket_name, Key=S3_METADATA_KEY)\n",
+    "    print(f\"✅ Metadata uploaded to s3://{bucket_name}/{S3_METADATA_KEY}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1580b5fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model uploaded to s3://my-feature-store-data/models/best_model.pkl\n",
+      "✅ Metadata uploaded to s3://my-feature-store-data/models/best_model_metadata.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "upload_model_to_s3(best_model, bucket_name, s3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1580b5fd",
+   "id": "3c13943f",
    "metadata": {},
    "outputs": [],
    "source": []
